# utf8-string

./: .gitignore  .travis.yml  CHANGELOG.markdown  Setup.hs  utf8-string.cabal  utf8.cabal
Codec/Binary/UTF8/: Generic.hs  String.hs
Data/ByteString/: UTF8.hs
Data/ByteString/Lazy/: UTF8.hs
Data/ByteString/Lazy/UTF8/: IsString.hs
Data/ByteString/UTF8/: IsString.hs
Data/String/: UTF8.hs
System/Environment/: UTF8.hs
System/IO/: UTF8.hs
Text/: UTF8.hs
tests/: Bench.hs  BenchBytestring.hs  Tests.hs  tests.hs
